--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
-<!DOCTYPE html>
+<!-- index.html -->
 <html>
-	<head>
-	</head>
-	<body>
-	</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Page title</title>
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <h1>Welcome to my page</h1>
+    <script type="text/javascript" src="scripts.js"></script>
+  </body>
 </html>
